# Moolean

./: .gitignore  .pre-commit-config.yaml  debug.py  main.py  pyproject.toml
src/: moolean.py
