[project]
name = "Moolean"
version = "0.1.0"
description = "A ultra-slow calculator written in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "debugpy>=1.8.14",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
    "pyparsing>=3.2.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]
